--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <head>
+	<head>
 		<title>Game</title>
 		<style>
 			body {
@@ -32,9 +32,9 @@
 	</head>
 	<body onload='setup();'>
 		<div id='gameCanvas'></div>
-		<script src='./Scripts/three.min.js'></script>
-		<script src='./Scripts/keyboard.js'></script>
-		<script src='./Scripts/game.js'></script>
+		<script src='./three.min.js'></script>
+		<script src='./keyboard.js'></script>
+		<script src='./game.js'></script>
 		<div id='scoreboard'>
 			<h1 id='scores'>0-0</h1>
 			<h1 id='title'>3D PONG</h1>
