--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
 		<script src='./game.js'></script>
 		<div id='scoreboard'>
 			<h1 id='scores'>0-0</h1>
-			<h1 id='title'>3D PONG</h1>
-			<h2 id='winnerBoard'>First to 7 wins!</h2>
-			<h3>A - move left
-			<br>D - move right</h3>
+			<h1 id='title'>SpaceVulpine</h1>
+			<h2 id='winnerBoard'>Shoot the enemies!</h2>
+			<h3></h3>
 		</div>
 	</body>
 </html>
